# optimal-rubiks-cube-solver

./: CMakeLists.txt  Project_Report.tex  README.md  main.cpp  test.cpp
Engine/: engine.h
Solver/: database.cpp  database.h
Util/: databasegenerator.h
